don't use QFile::encodeName() for strings that are passed as KProcess options

Patch provided by gouzhuang(.)gmail.com. Sorry for the delay.

BUG:201070

svn path=/trunk/KDE/kdeutils/kgpg/; revision=1029477